# Work-Desk

./: .env.example  .gitignore  QUICK_START.md  README.md  check_count.py  debug_graph_html.py  debug_ocr.py  fix_quotes.py  implementation_plan.md  inspect_data.py  logo_b64.txt  logo_base64.txt  pyproject.toml  reproduce_issue_v2.py  run_dev.bat
config/: default.yaml
data/: sample_ai_history.txt
docs/: IMPLEMENTATION_PLAN_OLLAMA.md  UI_GUIDE.md  system_prompt_template.md
docs/user-guide/: advanced.md  api-reference.md  configuration.md  features.md  getting-started.md  index.md  troubleshooting.md
notebooks/examples/: multi_service_example.py  simple_openai_chat.py
scripts/: check_db.py  check_output.txt  check_sources.txt  debug_graph.html  debug_yt.py  debug_yt_2.py  debug_yt_3.py  ingest_sample.py  inspect_output.txt  launch_ui.py  output.txt  quick_test.py  reproduce_issue.py  reproduce_youtube_error.py  setup_auth.py  test_graph.html  test_youtube_api.py  verify_metadata.py  verify_pdf_fix.py
scripts/debug/: debug_audio.py  debug_mp.py  test_multimodal_chat.py
src/ai_workdesk/: __init__.py
src/ai_workdesk/core/: __init__.py  auth.py  config.py  logger.py
src/ai_workdesk/rag/: advanced_features.py  audio_processor.py  graph_rag.py  ingestion.py  metadata_store.py  vector_store.py  visualization.py  youtube_loader.py  youtube_summarizer.py
src/ai_workdesk/smart_dashboard/: ai_processor.py  data_engine.py  models.py  rag_engine.py  ui.py  ui.py.backup
src/ai_workdesk/smart_dashboard/fetchers/: base.py  email_fetcher.py  rss_fetcher.py  trends_fetcher.py  youtube_fetcher.py
src/ai_workdesk/tools/: __init__.py  autogen_studio_manager.py  obsidian_exporter.py
src/ai_workdesk/tools/embeddings/: __init__.py
src/ai_workdesk/tools/llm/: __init__.py  ollama_client.py
src/ai_workdesk/tools/retrieval/: __init__.py
src/ai_workdesk/tools/tts/: __init__.py  tts_engine.py
src/ai_workdesk/tools/vision/: __init__.py
src/ai_workdesk/ui/: __init__.py  constants.py  gradio_app.py
src/ai_workdesk/ui/components/: layout.py
src/ai_workdesk/ui/tabs/: about.py  autogen.py  home.py
src/ai_workdesk/ui/tabs/workdesk/: __init__.py  chat_lab.py  ingestion.py  layout.py  metadata.py  rag_lab.py  visualization.py
src/ai_workdesk/ui/utils/: __init__.py  doc_renderer.py
tests/: test_metadata_ui.py  test_rag_chat.py  verify_autogen_integration.py  verify_youtube_summarizer.py
tests/manual/: test_gradio_simple.py  test_ingestion.py
tests/unit/: test_auth.py  test_config.py
